Updating the design

--- a/components/theme.html
+++ b/components/theme.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/main.css">
   <title>Oscar Palomino | Ingeniero Industrial - Data Scientist</title>
 </head>
 <body>
   <header>
     <nav class="navContainer">
-      <div class="logo"></div>
-      <figure class="imageContainer"><img src="/" alt="Logo Oscar Palomino"></figure>
-      <div class="logoContent">
-        <h1>Oscar Palomino</h1>
+      <div class="logo">
+        <figure class="imageContainer"><img src="/" alt="Logo Oscar Palomino"></figure>
+        <div class="logoContent">
+          <h1>Oscar Palomino</h1>
+        </div>
       </div>
       <div class="menuContainer">
         <ul>
@@ -21,4 +23,9 @@
       </div>
     </nav>
   </header>
+  <footer>
+    <div class="credits">
+      <h1>Designed with 💙 by Oscar Palomino</h1>
+    </div>
+  </footer>
 </body>
