--- a/components/globals.pug
+++ b/components/globals.pug
@@ -5,17 +5,16 @@ mixin boxProject(titulo1, titulo2, titulo3, enlace, contenido1, contenido2, imag
         .boxContent
             h1= titulo1
             h2= titulo2
-            h3= titulo2
+            h3= titulo3
                 span 
                     a(href=+enlace target="_blank")= enlace
             p= contenido1
             p= contenido2
         .boxImageContainer
-            figure.boxImage
-                img(src=""+imagen alt= descripcion)
+            img(src=""+imagen alt= descripcion)
 
 mixin contactForm(name, email, message, button)
-    .formContact
+    form.formContact
         label= name
         input.formInput(type="text")
         label= email
