--- a/components/theme.pug
+++ b/components/theme.pug
@@ -2,6 +2,7 @@ include globals.pug
 doctype html
 head
     meta(charset="UTF-8")
+    link(rel="stylesheet" href="css/main.css")
     title Oscar Palomino | Ingeniero Industrial - Data Scientist
 body
     include header.pug
