Updating styles - Header, hero, sections

--- a/css/components/_hero.scss
+++ b/css/components/_hero.scss
@@ -12,6 +12,7 @@
             grid-column: 1;
             margin-top: 100px;
             h1 {
+                color: $ligthColor;
                 font-family: $fontMainTitle;
                 font-size: 50px;
                 text-align: center;
