--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,7 @@ header .navContainer .menuContainer ul li a {
   margin-top: 100px;
 }
 .HeroContent .Hero .heroContent h1 {
+  color: #FFF;
   font-family: "Satisfy", cursive;
   font-size: 50px;
   text-align: center;
