Finishing styles hero, sections, footer, adding images... skills section in troubles

--- a/components/header.pug
+++ b/components/header.pug
@@ -2,16 +2,16 @@ header
     nav.navContainer
         .logo
             figure.imageContainer
-                img(src="/" alt="Logo Oscar Palomino")
+                img(src="../assets/logo.svg" alt="Logo Oscar Palomino")
             .logoContent
                 h1 Oscar Palomino
         .menuContainer
             ul
                 li
-                    a(href="#") Inicio
+                    a(href="#home") Inicio
                 li
-                    a(href="#") Proyectos
+                    a(href="#projects") Proyectos
                 li
-                    a(href="#") Habilidades
+                    a(href="#skills") Habilidades
                 li
-                    a(href="#") Contacto
+                    a(href="#contact") Contacto
