--- a/components/theme.html
+++ b/components/theme.html
@@ -8,24 +8,22 @@
   <header>
     <nav class="navContainer">
       <div class="logo">
-        <figure class="imageContainer"><img src="/" alt="Logo Oscar Palomino"></figure>
+        <figure class="imageContainer"><img src="../assets/logo.svg" alt="Logo Oscar Palomino"></figure>
         <div class="logoContent">
           <h1>Oscar Palomino</h1>
         </div>
       </div>
       <div class="menuContainer">
         <ul>
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Proyectos</a></li>
-          <li><a href="#">Habilidades</a></li>
-          <li><a href="#">Contacto</a></li>
+          <li><a href="#home">Inicio</a></li>
+          <li><a href="#projects">Proyectos</a></li>
+          <li><a href="#skills">Habilidades</a></li>
+          <li><a href="#contact">Contacto</a></li>
         </ul>
       </div>
     </nav>
   </header>
   <footer>
-    <div class="credits">
-      <h1>Designed with 💙 by Oscar Palomino</h1>
-    </div>
+    <h1>Designed with 💙 by Oscar Palomino</h1>
   </footer>
 </body>
