--- a/css/main.scss
+++ b/css/main.scss
@@ -2,3 +2,4 @@
 @import "components/headers.scss";
 @import "components/hero.scss";
 @import "components/sections.scss";
+@import "components/footers.scss";
