--- a/components/globals.pug
+++ b/components/globals.pug
@@ -1,5 +1,3 @@
-
-
 mixin boxProject(titulo1, titulo2, titulo3, enlace, contenido1, contenido2, imagen, descripcion)
     .boxContainer
         .boxContent
@@ -7,7 +5,7 @@ mixin boxProject(titulo1, titulo2, titulo3, enlace, contenido1, contenido2, imag
             h2= titulo2
             h3= titulo3
                 span 
-                    a(href=+enlace target="_blank")= enlace
+                    a(href=""+enlace target="_blank")= enlace
             p= contenido1
             p= contenido2
         .boxImageContainer
@@ -22,3 +20,7 @@ mixin contactForm(name, email, message, button)
         label= message
         input.formInputMessage(type="text")
         a.button(href="/" target="_blank")= button
+
+mixin skill(name)
+    span.skillName
+        p= name
