--- a/css/components/_sections.scss
+++ b/css/components/_sections.scss
@@ -5,11 +5,13 @@ main {
         margin-top: 100px;
         padding-bottom: 30px;
         text-align: center;
+        color: $lightBlueTitles;
+        font-size: 2rem;
         border-bottom: 1px solid $darkBlue;
     }
     .boxContainer {
         margin-top: 50px;
-        border: 1px solid $darkBlue;
+        box-shadow: 5px 5px 5px 5px #000000A1;
         border-radius: 30px;
         padding: 50px;
         display: flex;
@@ -21,14 +23,21 @@ main {
             h1 {
                 font-size: 40px;
                 font-weight: 600;
+                color: $darkBlue;
             }
             h2 {
                 font-size: 30px;
                 font-weight: 600px;
+                color: $darkGray;
+            }
+            h3 {
+                font-size: 25px;
+                font-weight: 600px;
+                color: $darkGray;
             }
             a {
                 text-decoration: none;
-                color: $darkBlue;
+                color: $darkGray;
             }
         }
         .boxImageContainer {
@@ -39,6 +48,7 @@ main {
         }
 
     }
+
     .contact {
         width: 100%;
         margin: auto;
@@ -48,17 +58,18 @@ main {
             width: 90%;
             height: auto;
             margin: 50px auto;
-            padding: 30px;
-            border: 1px solid $darkBlue;
+            padding: 50px;
             border-radius: 30px;
             text-align: left;
+            box-shadow: 5px 5px 5px 5px #000000A1;
             label {
                 margin-bottom: 20px;
             }
             input {
-                width: 100%;
+                width: 95%;
                 height: 30px;
                 margin: 10px 0 20px 0;
+                padding: 0 20px;
                 border-radius: 10px;
             }
             .formInputMessage {
@@ -67,9 +78,47 @@ main {
             .button {
                 padding: 10px 50px;
                 margin-top: 20px;
-                border: 1px solid $darkBlue;
+                color: $ligthColor;
+                font-size: 1.5rem;
+                display: flex;
+                justify-content: center;
+                background-color: $darkBlue;
                 border-radius: 20px;
+                text-decoration: none;
             }
         }
+    }
+}
+
+.skills {
+    display: block;
+    background-color: $darkBlue;
+    width: 100%;
+    height: auto;
+    margin-top: 100px;
+    text-align: center;
+    h3 {
+        padding-top: 100px;
+        color: $lightBlue;
+        text-align: center;
+        font-size: 2rem;
+    }
+    .imageContainer{
+        position: relative;
+        width: 100%;
+        height: auto;
+    }
+        img {
+            position: absolute;
+            margin-top: 50px;
+            bottom: 0;
+        }
+    .skillName {
+        float: left;
+        background-color: $backgroundClear;
+        width: 200px;
+        padding: .5em;
+        margin: 1em;
+        border-radius: 50px;
     }
 }
