--- a/index.pug
+++ b/index.pug
@@ -1,32 +1,54 @@
 extend components/theme.pug
 block content
-    section.HeroContent
+    section.HeroContent#home
         .Hero
             .heroContent
-                h1 Ingeniero Industrial Data Scientist
+                h1 Ingeniero Industrial, Data Scientist
                 p Soy un ingeniero industrial y científico de datos de Colombia.
                 p Disponible para nuevos proyectos.
                 a(href="mailto:ing.oscarp1@gmail.com")
-                    i 
+                    img(src="../assets/letter.svg")
                     p Contáctame
             figure.heroImageContainer
-                img(src="")
+                img(src="../assets/Hero.png" alt="Oscar Palomino" srcset="../assets/Hero.png, ../assets/Hero@2x.png 2x")
             .socialMedia
                 ul
-                    li Facebook
-                    li Github
-                    li LinkedIn
-                    li Twitter
-                    li Instagram
+                    li 
+                        a(href="fb.me/oskr.epc" target="_blank")
+                            img(src="../assets/facebook.svg" alt="Facebook")
+                    li 
+                        a(href="https://github.com/OscarPalominoC" target="_blank")
+                            img(src="../assets/Github.svg" alt="GitHub")
+                    li 
+                        a(href="https://www.linkedin.com/in/oscarpalominocardenas/" target="_blank")
+                            img(src="../assets/LinkedIn.svg" alt="LinkedIn")
+                    li 
+                        a(href="https://twitter.com/OscarPalominoC" target="_blank")
+                            img(src="../assets/Twitter.svg" alt="Twitter")
+                    li 
+                        a(href="https://www.instagram.com/oscar.palominoc/" target="_blank")
+                            img(src="../assets/instagram.svg" alt="Instagram")
     main
-        section.projectsContainer
+        section.projectsContainer#projects
             h3.title Proyectos
 
-            +boxProject('PlatziVideo', 'HTML y CSS', 'Puedes verla en: ', 'https://oscarpalominoc.github.io/platzi-video/', 'Página web en la que los usuarios registrados pueden guardar su playlist favorita y compartila con sus amigos.', 'Para el diseño se implementó CSS Grid.', '/', 'PlatziVideo')
-            +boxProject('Movi.es', 'HTML y CSS', 'Puedes verla en: ', 'https://oscarpalominoc.github.io/grid-css-movi/', 'Página web en la que los usuarios registrados pueden ver todas las clases de películas que estén disponibles.', 'Para el diseño se implementó CSS Grid.', '/', 'Movi.es')
-            +boxProject('Brand', 'HTML y CSS', 'Puedes verla en: ', 'https://oscarpalominoc.github.io/digital-product/', 'Página web en la que puedes comprar todas las cajas con gatitos que desees. Si llegas a efectuar una compra, lo más probable es que no te llegue una caja con gatitos, pero si me apoyarías a continuar aprendiendo.', 'Para el diseño se implementó display Flex.', '/', 'Cajas con gatitos.')
-        section.skills
-        section.contact
+            +boxProject('PlatziVideo', 'HTML y CSS', 'Puedes verla en: ', 'https://oscarpalominoc.github.io/platzi-video/', 'Página web en la que los usuarios registrados pueden guardar su playlist favorita y compartila con sus amigos.', 'Para el diseño se implementó CSS Grid.', '../assets/PlatziVideo Screen.png', 'PlatziVideo')
+            +boxProject('Movi.es', 'HTML y CSS', 'Puedes verla en: ', 'https://oscarpalominoc.github.io/grid-css-movi/', 'Página web en la que los usuarios registrados pueden ver todas las clases de películas que estén disponibles.', 'Para el diseño se implementó CSS Grid.', '../assets/Movie Screen.png', 'Movi.es')
+            +boxProject('Brand', 'HTML y CSS', 'Puedes verla en: ', 'https://oscarpalominoc.github.io/digital-product/', 'Página web en la que puedes comprar todas las cajas con gatitos que desees. Si llegas a efectuar una compra, lo más probable es que no te llegue una caja con gatitos, pero si me apoyarías a continuar aprendiendo.', 'Para el diseño se implementó display Flex.', '../assets/Brand Screen.png', 'Cajas con gatitos.')
+    section.skills#skills
+        h3.title Habilidades
+        .imageContainer
+            img(src="../assets/SkillsSection.png" alt="Habilidades" srcset="../assets/SkillsSection.png, ../assets/SkillsSection@2x.png 2x")
+        +skill('Matemáticas')
+        +skill('Inglés')
+        +skill('C#')
+        +skill('Diseño web')
+        +skill('Maestro Pokemon')
+        +skill('Python')
+        +skill('Data Science')
+        +skill('Javascript')
+    main
+        section.contact#contact
             h3.title ¿Trabajamos juntos?
             +contactForm('Nombre', 'Email', 'Mensaje', 'Enviar')
         
