--- a/css/components/_hero.scss
+++ b/css/components/_hero.scss
@@ -14,13 +14,13 @@
             h1 {
                 color: $ligthColor;
                 font-family: $fontMainTitle;
-                font-size: 50px;
+                font-size: 4rem;
                 text-align: center;
                 color: $ligthColor;
             }
             p {
                 font-family: $fontTitle;
-                font-size: 20px;
+                font-size: 1.5rem;
                 text-align: left;
                 margin-top: 10px;
             }
