--- a/css/components/_sections.scss
+++ b/css/components/_sections.scss
@@ -90,6 +90,7 @@ main {
     }
 }
 
+
 .skills {
     display: block;
     background-color: $darkBlue;
@@ -103,22 +104,46 @@ main {
         text-align: center;
         font-size: 2rem;
     }
-    .imageContainer{
-        position: relative;
-        width: 100%;
-        height: auto;
-    }
-        img {
-            position: absolute;
-            margin-top: 50px;
-            bottom: 0;
+    .skillsDivision {
+        margin: 0 100px;
+        display: grid;
+        grid-template-columns: 1fr 2fr 1fr;
+        align-items: center;
+        justify-content: center;
+        .skillsLeft {
+            grid-column: 1;
+            justify-content: left;
+            display: grid;
+            grid-template-rows: repetat(4, 1fr);
         }
-    .skillName {
-        float: left;
-        background-color: $backgroundClear;
-        width: 200px;
-        padding: .5em;
-        margin: 1em;
-        border-radius: 50px;
+        .imageContainer{
+            grid-column: 2;
+            width: 100%;
+            height: auto;
+            img {
+                margin-top: 50px;
+                bottom: 0;
+            }
+        }
+        .skillsRight {
+            grid-column: 3;
+            justify-content: right;
+            display: grid;
+            grid-template-rows: repeat(4, 1fr);
+            
+            p {
+                text-align: center;
+            }
+        }
     }
+}
+
+.skillName {
+    margin: 10px;
+    padding: 10px;
+    width: 200px;
+    border-radius: 50px;
+    font-size: 1.3rem;
+    background-color: $backgroundClear;
+    color: $darkBlue;
 }
