--- a/css/components/_hero.scss
+++ b/css/components/_hero.scss
@@ -25,7 +25,7 @@
                 margin-top: 10px;
             }
             a {
-                margin: 20px 0;
+                margin: 50px 0;
                 width: fit-content;
                 padding: 10px;
                 display: flex;
@@ -50,6 +50,7 @@
             img {
                 position: absolute;
                 bottom: 0;
+                height: 100%;
             }
         }
         .socialMedia {
