--- a/css/components/_footers.scss
+++ b/css/components/_footers.scss
@@ -2,6 +2,6 @@ footer {
     width: 100%;
     height: 50px;
     text-align: center;
-    background-color: black;
+    background-color: $darkBlue;
     color: $ligthColor;
 }
