--- a/index.pug
+++ b/index.pug
@@ -10,11 +10,11 @@ block content
                     img(src="../assets/Letter.svg")
                     p Contáctame
             figure.heroImageContainer
-                img(src="../assets/Hero.png" alt="Oscar Palomino" srcset="../assets/Hero.png, ../assets/Hero@2x.png 2x")
+                img(src="../assets/Hero.webp" alt="Oscar Palomino" srcset="../assets/Hero.webp, ../assets/Hero@2x.webp 2x")
             .socialMedia
                 ul
                     li 
-                        a(href="fb.me/oskr.epc" target="_blank")
+                        a(href="https://fb.me/oskr.epc" target="_blank")
                             img(src="../assets/facebook.svg" alt="Facebook")
                     li 
                         a(href="https://github.com/OscarPalominoC" target="_blank")
@@ -32,9 +32,9 @@ block content
         section.projectsContainer#projects
             h3.title Proyectos
 
-            +boxProject('PlatziVideo', 'HTML y CSS', 'Puedes verla en: ', 'https://oscarpalominoc.github.io/platzi-video/', 'Página web en la que los usuarios registrados pueden guardar su playlist favorita y compartila con sus amigos.', 'Para el diseño se implementó CSS Grid.', '../assets/PlatziVideo Screen.png', 'PlatziVideo')
-            +boxProject('Movi.es', 'HTML y CSS', 'Puedes verla en: ', 'https://oscarpalominoc.github.io/grid-css-movi/', 'Página web en la que los usuarios registrados pueden ver todas las clases de películas que estén disponibles.', 'Para el diseño se implementó CSS Grid.', '../assets/Movie Screen.png', 'Movi.es')
-            +boxProject('Brand', 'HTML y CSS', 'Puedes verla en: ', 'https://oscarpalominoc.github.io/digital-product/', 'Página web en la que puedes comprar todas las cajas con gatitos que desees. Si llegas a efectuar una compra, lo más probable es que no te llegue una caja con gatitos, pero si me apoyarías a continuar aprendiendo.', 'Para el diseño se implementó display Flex.', '../assets/Brand Screen.png', 'Cajas con gatitos.')
+            +boxProject('PlatziVideo', 'HTML y CSS', 'Puedes verla en: ', 'https://oscarpalominoc.github.io/platzi-video/', 'Página web en la que los usuarios registrados pueden guardar su playlist favorita y compartila con sus amigos.', 'Para el diseño se implementó CSS Grid.', '../assets/PlatziVideoScreen.webp', 'PlatziVideo')
+            +boxProject('Movi.es', 'HTML y CSS', 'Puedes verla en: ', 'https://oscarpalominoc.github.io/grid-css-movi/', 'Página web en la que los usuarios registrados pueden ver todas las clases de películas que estén disponibles.', 'Para el diseño se implementó CSS Grid.', '../assets/MovieScreen.webp', 'Movi.es')
+            +boxProject('Brand', 'HTML y CSS', 'Puedes verla en: ', 'https://oscarpalominoc.github.io/digital-product/', 'Página web en la que puedes comprar todas las cajas con gatitos que desees. Si llegas a efectuar una compra, lo más probable es que no te llegue una caja con gatitos, pero si me apoyarías a continuar aprendiendo.', 'Para el diseño se implementó display Flex.', '../assets/BrandScreen.webp', 'Cajas con gatitos.')
     section.skills#skills
         h3.title Habilidades
         .skillsDivision
@@ -44,7 +44,7 @@ block content
                 +skillLeft('C#')
                 +skillRight('Diseño web')
             .imageContainer
-                img(src="../assets/SkillsSection.png" alt="Habilidades" srcset="../assets/SkillsSection.png, ../assets/SkillsSection@2x.png 2x")
+                img(src="../assets/SkillsSection.webp" alt="Habilidades" srcset="../assets/SkillsSection.webp, ../assets/SkillsSection@2x.webp 2x")
             .skillsRight
                 +skillRight('Maestro Pokemon')
                 +skillLeft('Python')
